# xarray-spatial

./: .appveyor.yml  .flake8  .gitattributes  .gitignore  .readthedocs.yml  .travis.yml  777.txt  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Citation-styles.md  GOVERNANCE.md  LICENSE.txt  MANIFEST.in  README.md  RELEASE.md  _test_examples_cli.py  appveyor.yml  citations.md  codecov.yml  dependencies.dot  environment.yml  list.txt  pyproject.toml  record.txt  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test-zonal-custom-stats.py  test-zonal.py  test_examples_cli.py  tile_idea.py  tox.ini  zonal-stats.ipynb  zonal_stats-benchmark.ipynb
.github/ISSUE_TEMPLATE/: bug_report.md  feature-proposal.md
.github/workflows/: codecov.yml  docs-publish.yml  flake8.yml  lint.yml  pypi-publish.yml  test.yml
benchmarks/: README.md  asv.conf.json  results.md
benchmarks/benchmarks/: aspect.py  classify.py  common.py  curvature.py  focal.py  hillshade.py  multispectral.py  pathfinding.py  perlin.py  polygonize.py  proximity.py  slope.py  terrain.py  viewshed.py  zonal.py
conda.recipe/: README.md  build.sh  meta.yaml  run_test.py
docs/: .gitignore  Makefile  docs-requirements.txt  make.bat
docs/data/: example_terrain.nc
examples/: Path finding - City of Austin Road Network.ipynb  Path-finding_City-of-Austin-Road-Network.ipynb  Pathfinding_Austin_Road_Network.ipynb  Terrain Reclassify + Cross Tabulate.ipynb  animated_hillshade.py  cloudless-mosaic-sentinel2.ipynb  coregistration.ipynb  datasets.yml  fast_terrain-benchmarking.ipynb  housing_price_feature_engineering.ipynb  local-NAIP.ipynb  local-tools.ipynb  mars-site-selection.ipynb  mosaic-sentinel2.ipynb  ndvi_hotspots.ipynb  perlin-benchmarking.ipynb  pharmacy-deserts.ipynb  reprojection.ipynb  reprojection.py  reprojection_rio.ipynb  resample.ipynb  reverse_reprojection.ipynb  save-cogs-azure.ipynb  save_cogs_azure.ipynb  tiling.ipynb  viewshed_gpu.ipynb  xarray-spatial_classification-methods.ipynb  zonal_stats.ipynb
img/: dependencies.dot
optional-modules/: reprojection.py
test_pip_packaging/: gen_tags.py  test_ex_paths.sh
xarray_spatial/: _version.py  aspect.py  ndvi.py  perlin.py  terrain.py  utils.py
xrspatial/: .version  __init__.py  __main__.py  _version.py  analytics.py  aspect.py  bump.py  classify.py  conversion.py  convolution.py  curvature.py  esri.py  fast_perlin.py  fast_terrain.py  focal.py  hillshade.py  local.py  multispectral.py  pathfinding.py  perlin.py  proximity.py  slope.py  spectral.py  terrain.py  tiles.py  utils.py  viewshed.py  zonal.py
(+145 files in other folders)
