[build-system]
requires = [
    'build',
    'param',
    'pyct',
    'setuptools >= 54.1.2',
]

[tool.check-manifest]
ignore = [
    '.appveyor.yml',
    '.version',
    'CHANGELOG.md',
    'CODE_OF_CONDUCT.md',
    'CONTRIBUTING.md',
    'Citation-styles.md',
    'RELEASE.md',
    'requirements-dev.txt',
    'requirements.txt',
    'test_examples_cli.py',
    'tox.ini',
    'benchmarks/*',
    'examples/*',
    'examples/user_guide/*',
    'img/*',
    'test_pip_packaging/*',
]