[metadata]
author = makepath
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
description = xarray-based spatial analysis tools
license = MIT
license_file = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown
name = xarray-spatial
platforms = any
url = https://github.com/makepath/xarray-spatial

[options]
include_package_data = True
install_requires =
    datashader >= 0.15.0
    numba
    xarray
    numpy
packages = find:
python_requires = >=3.8
setup_requires = setuptools_scm
zip_safe = False

[options.entry_points]
console_scripts =
    xrspatial = xrspatial.__main__:main

[options.extras_require]
doc =
    dask[dataframe]
    geopandas
    Jinja2 >=2.11
    ipykernel
    matplotlib
    nbsphinx
    numpydoc
    pandoc
    pydata_sphinx_theme
    sphinx
    sphinx-multiversion
    sphinx-panels
    sphinx_rtd_theme
examples =
optional =
    # Optional for polygonize return types.
    awkward>=1.4
    geopandas
    shapely
    spatialpandas
    # Optional for gpu_rtx functions. Also requires cupy.
    rtxpy
tests =
    flake8
    isort
    noise >= 1.2.2
    pytest
    pytest-cov

[flake8]
exclude =
    .git,
    .asv,
    __pycache__,
max-line-length = 100

[isort]
line_length = 100
